<resources>
    <string name="app_name">School Planner</string>
    <string name="term_title">TERMS</string>
    <string name="main_title">Welcome to School Planner</string>
    <string name="main_button_text">Click to Enter</string>
    <string name="enter_term_name">Enter Term Name</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="enter_assessment_name">Enter Assessment Name</string>
    <string name="course_title">COURSES</string>
    <string name="assessment_title">ASSESSMENTS</string>
    <string name="enter_start_date">Enter Start Date</string>
    <string name="enter_end_date">Enter End Date</string>
    <string name="go_to_courses">COURSES</string>
    <string name="go_to_assessments">ASSESSMENTS</string>
    <string name="go_to_notes">NOTES</string>
    <string name="go_to_instructors">INSTRUCTORS</string>
    <string name="progress">PROGRESS</string>
    <string name="type">TYPE</string>
    <string name="name">NAME</string>
    <string name="phone">PHONE</string>
    <string name="email">EMAIL</string>
    <string name="save">SAVE</string>
    <string name="note_title">NOTES</string>
    <string name="instructor_title">INSTRUCTORS</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="write_note_here">WRITE NOTE HERE...</string>
    <string name="share">SHARE</string>
    <string name="start_date">START DATE</string>
    <string name="end_date">END DATE</string>
    <string-array name="status_array">
        <item>Plan to Take</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
    </string-array>
    <string-array name="assessment_type_array">
        <item>Objective</item>
        <item>Performance</item>
    </string-array>
    <string name = "sevenDayReminder">Set Reminder</string>
    <string name = "notifyme">Set Reminder</string>
    <string name="channel_name">myChannel</string>
    <string name="channel_description">myChannelDescription</string>
</resources>