<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userinterface.InstructorDetailController">

    <Button
        android:id="@+id/instructorSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="544dp"
        android:backgroundTint="#125AC5"
        android:onClick="save"
        android:text="@string/save"
        app:layout_constraintStart_toEndOf="@+id/instructorEditButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/instructorDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="544dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#125AC5"
        android:onClick="delete"
        android:text="@string/delete"
        app:layout_constraintEnd_toStartOf="@+id/instructorEditButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/instructorEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="544dp"
        android:backgroundTint="#125AC5"
        android:onClick="edit"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructorNameTF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/instructorNameText"
        app:layout_constraintEnd_toStartOf="@+id/instructorNameText"
        app:layout_constraintTop_toTopOf="@+id/instructorNameText" />

    <TextView
        android:id="@+id/instructorPhoneTF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/phone"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/instructorPhoneText"
        app:layout_constraintEnd_toStartOf="@+id/instructorPhoneText"
        app:layout_constraintTop_toTopOf="@+id/instructorPhoneText" />

    <TextView
        android:id="@+id/instructorEmailTF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/email"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/instructorEmailText"
        app:layout_constraintEnd_toStartOf="@+id/instructorEmailText"
        app:layout_constraintTop_toTopOf="@+id/instructorEmailText" />

    <EditText
        android:id="@+id/instructorNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/instructorPhoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructorNameText" />

    <EditText
        android:id="@+id/instructorEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructorPhoneText" />

</androidx.constraintlayout.widget.ConstraintLayout>